--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
   <meta name="author" content="">
   <link rel="icon" href="favicon.ico">
   <title>2B-studios | Web Agency</title>
+  <!-- script -->
+  <script src="scripts/script.js"></script>
+  <script src="scripts/smooth-scroll.js"></script>
+  <script src="scripts/bootstrap.main.js"></script>
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
   <link href="css/style.css" rel="stylesheet">
   <link href="css/default.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 
 </head>
@@ -50,7 +55,7 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-5 header-2b">
+        <div class="col-md-5 header-2b wow fadeInLeft">
           <img src="images/2b.png" alt="">
         </div>
         <div class="col-md-6 header-text">
@@ -67,7 +72,10 @@
     </div>
   </div>
 
-
+  <script src="js/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
 </body>
 
 </html>
