--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
           <img src="images/2b.png" alt="">
         </div>
 
-        <div class="col-md-6 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s" ">
 
-        <div class="col-md-6 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s" ">
+        <div class="col-md-6 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
 
           <h2>Ai nevoie de un <span><b>website?</b></span></h2>
           <p><b>2Bstudios</b> este o agentie web profesionista. Noi facem ca <br>
