--- a/index.html
+++ b/index.html
@@ -1,84 +1,97 @@
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+  <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="favicon.ico">
-  <title>2B-studios | Web Agency</title>
-  <!-- script -->
-  <script src="scripts/script.js"></script>
-  <script src="scripts/smooth-scroll.js"></script>
-  <script src="scripts/bootstrap.main.js"></script>
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/default.css" rel="stylesheet">
-  <link href="css/animate.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="favicon.ico">
+    <title>2B-studios | Web Agency</title>
+    <!-- script -->
+    <script src="scripts/script.js"></script>
+    <script src="scripts/smooth-scroll.js"></script>
+    <script src="scripts/bootstrap.main.js"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/default.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
 
-</head>
+  </head>
 
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="images/logo.png" alt=""></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Despre Noi</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#prtofolio">Portofoliu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#whatwedo">Ce facem?</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="home-banner">
+  <body>
+    <div class="container-top">
 
-
-    <div class="container">
-
-      <div class="row">
-        <div class="col-md-5 header-2b wow fadeInLeft">
-          <img src="images/2b.png" alt="">
-        </div>
-
-
-        <div class="col-md-6 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
-
-          <h2>Ai nevoie de un <span><b>website?</b></span></h2>
-          <p><b>2Bstudios</b> este o agentie web profesionista. Noi facem ca <br>
-          prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
-        a primi o oferta din partea noastra!</p>
-
-
-          <a href="" class="btn">COMANDA ACUM!</a>
+      <div class="top-wrap">
+        <div class="custom-container">
+          <div class="logo">
+            <a href="">
+              <img src="images/logo.png" alt="">
+            </a>
+          </div>
+          <div id="main_nav">
+            <div id="nav">
+              <nav class="navbar navbar-default navbar-inverse">
+                <div class="container-fluid">
+                  <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#content_section_b" aria-expanded="false">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                    </button>
+                  </div>
+                  <div id="content_section_b" class="collapse navbar-collapse">
+                    <ul id="nav" class="dropdown nav navbar-nav">
+                      <li class="">
+                        <a href="/">Despre Noi</a>
+                      </li>
+                      <li class="">
+                        <a href="/">Portofoliu</a>
+                      </li>
+                      <li class="">
+                        <a href="/">Ce facem?</a>
+                      </li>
+                      <li class="">
+                        <a href="/">Contact</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+            </div>
+          </div>
         </div>
       </div>
-
     </div>
-  </div>
+    <div class="home-banner">
+      <div class="v-align">
+        <div class="custom-container">
+          <div class="row">
+            <div class="col-md-5 header-2b wow fadeInLeft">
+              <img src="images/2b.png" alt="">
+            </div>
+            <div class="col-md-6 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
+              <h2>Ai nevoie de un <b>website?</b></h2>
+              <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
+                prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
+              a primi o oferta din partea noastra!</p>
+              <a href="" class="btn">COMANDA ACUM!</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-  <script src="js/wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
-</body>
+    <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+  </body>
 
-</html>
+  </html>
