--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="col-md-6 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
               <h2>Ai nevoie de un <b>website?</b></h2>
-              <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
+              <p><b>2B-.studios</b> este o agentie web profesionista. Noi facem ca <br>
                 prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
               a primi o oferta din partea noastra!</p>
               <a href="" class="btn">COMANDA ACUM!</a>
