--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="icon" href="favicon.ico">
     <title>2B-studios | Web Agency</title>
     <!-- script -->
-    <script src="scripts/script.js"></script>
-    <script src="scripts/smooth-scroll.js"></script>
-    <script src="scripts/bootstrap.main.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/smooth-scroll.js"></script>
+    <script src="js/bootstrap.main.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -77,7 +77,11 @@
               <img src="images/2b.png" alt="">
             </div>
             <div class="col-md-7 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
-              <h2>Ai nevoie de un <b>website?</b></h2>
+              <h2>Ai nevoie de  
+                <b class="typewrite" data-period="1000" data-type='[ "Un Website?", "Un Logo?", "orice alt design?"]'>
+                  <span class="text-effect"></span>
+              </b>
+            </h2>
               <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
                 prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
               a primi o oferta din partea noastra!</p>
