--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>2B-studios | Web Agency</title>
+    <title>2B-studios | Agentie de Web Design</title>
     <!-- script -->
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
@@ -17,7 +17,7 @@
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
     <script src="js/bootstrap.main.js"></script>
-  
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -81,7 +81,7 @@
               <img src="images/2b.png" alt="">
             </div>
             <div class="col-md-7 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
-              <h2>Ai nevoie de  
+              <h2>Ai nevoie de
                 <b class="type-wrap"></b>
               </h2>
               <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
