--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi unde beatae quod magni quia at dolorum aperiam officiis amet voluptatibus eveniet ex ullam natus architecto qui ratione minus, animi, deleniti.
           </div>
             </div>
-            <div class="col-md-5"></div>
+            <div class="col-md-5 edge edge-right">
+              <img class="team_poto"src="images/balaj.png" alt="">
+            </div>
           </div>
        
         </div>
@@ -116,7 +118,9 @@
         <div class="custom-container">
           <div class="row">
          
-            <div class="col-md-5"></div>
+            <div class="col-md-5 edge edge-left">
+                  <img class="team_poto"src="images/balaj.png" alt="">
+            </div>
                <div class="col-md-7">
                  <div class="team_name">
             lorem
