--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi unde beatae quod magni quia at dolorum aperiam officiis amet voluptatibus eveniet ex ullam natus architecto qui ratione minus, animi, deleniti.
           </div>
             </div>
-            <div class="col-md-5 edge edge-right">
+            <div class="col-md-5 edge edge-right right">
               <img class="team_poto"src="images/balaj.png" alt="">
             </div>
           </div>
