--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <div id="content_section_b" class="collapse navbar-collapse">
                     <ul id="nav" class="dropdown nav navbar-nav">
                       <li class="">
-                        <a href="about-us.html/">Despre Noi</a>
+                        <a href="about-us.html">Despre Noi</a>
                       </li>
                       <li class="">
                         <a href="/">Portofoliu</a>
