--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
-            <a href="">
+            <a href="/">
               <img src="images/logo.png" alt="">
             </a>
           </div>
