--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
       <div class="top-wrap">
         <div class="custom-container">
           <div class="logo">
-            <a href="">
+            <a href="index.html">
               <img src="images/logo.png" alt="">
             </a>
           </div>
