--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <div class="custom-container">
           <div class="logo">
             <a href="index.html">
-              <img src="images/logo.png" alt="">
+              <img src="images/logo.png" alt="" class="initial-logo">
+              <img src="images/logo-nav.png" alt="" class="scrolled-nav">
             </a>
           </div>
           <div id="main_nav">
