--- a/about-us.html
+++ b/about-us.html
@@ -134,6 +134,7 @@
           </div>
           <div class="team_info">
             Eu sunt boss de boss smecher!!!!
+            Cel mai tare grafician ever!!!
           </div>
           </div>
             </div>
