--- a/about-us.html
+++ b/about-us.html
@@ -73,23 +73,18 @@
         </div>
       </div>
     </div>
-    <div class="home-banner">
+    <div class="banner about-banner">
       <div class="v-align">
-        <div class="custom-container">
-          <div class="row">
-            <div class="col-md-5 header-2b wow fadeInLeft">
-              <img src="images/2b.png" alt="">
-            </div>
-            <div class="col-md-7 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
-              <h2>Ai nevoie de
-                <b class="type-wrap"></b>
+        <div class="custom-container center">
+            <div class="header-text center">
+              <h2>
+                AFLĂ CINE SUNTEM!
               </h2>
-              <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
-                prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
-              a primi o oferta din partea noastra!</p>
-              <a href="" class="btn">COMANDA ACUM!</a>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do edolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
             </div>
-          </div>
+       
         </div>
       </div>
     </div>
@@ -143,7 +138,15 @@
       
       </div>
     </div>
-
+<div class="footer-wrapper">
+      <div class="center">
+        &copy;
+        <script type="text/javascript">
+          document.write(new Date().getFullYear());
+        </script>
+       2B-studios
+      </div>
+    </div>
 
     <script src="js/wow.min.js"></script>
     <script>
