--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="home-banner">
+    <div class="banner home-banner">
       <div class="v-align">
         <div class="custom-container">
           <div class="row">
