--- a/index.html
+++ b/index.html
@@ -93,7 +93,23 @@
         </div>
       </div>
     </div>
- 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+ <div class="home-order">
+   <div class="v-align">
+     <span>am nevoie de</span>
+     <input type="text" placeholder="test" id="order-input">
+     <input type="button" class="btn" value="continua" onclick="getOrder()">
+   </div>
+ </div>
 
 
     <script src="js/wow.min.js"></script>
