--- a/order.html
+++ b/order.html
@@ -96,7 +96,7 @@
    <script>
        var url_string = window.location.href;
 var url = new URL(url_string);
-var website = url.searchParams.get("wbsite");
+var website = url.searchParams.get("website");
 var EmailId = url.searchParams.get("EmailId");
 var Phone = url.searchParams.get("Phone");
 alert(website)
