--- a/order.html
+++ b/order.html
@@ -73,6 +73,7 @@
         </div>
       </div>
     </div>
+    <div id="website"></div>
     <div class="banner home-banner">
       <div class="v-align">
         <div class="custom-container">
@@ -93,14 +94,7 @@
         </div>
       </div>
     </div>
-   <script>
-       var url_string = window.location.href;
-var url = new URL(url_string);
-var website = url.searchParams.get("website");
-var EmailId = url.searchParams.get("EmailId");
-var Phone = url.searchParams.get("Phone");
-alert(website)
-   </script>
+
   
 
 
