--- a/order.html
+++ b/order.html
@@ -73,37 +73,16 @@
         </div>
       </div>
     </div>
-    <div id="website"></div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <div class="banner home-banner">
-      <div class="v-align">
-        <div class="custom-container">
-          <div class="row">
-            <div class="col-md-5 header-2b wow fadeInLeft">
-              <img src="images/2b.png" alt="">
-            </div>
-            <div class="col-md-7 header-text wow fadeInRight"  data-wow-duration="2s" data-wow-delay="0.3s">
-              <h2>Ai nevoie de
-                <b class="type-wrap"></b>
-              </h2>
-              <p><b>2B-studios</b> este o agentie web profesionista. Noi facem ca <br>
-                prezenta ta pe internet sa arate bine. Contacteaza-ne acum pentru <br>
-              a primi o oferta din partea noastra!</p>
-              <a href="" class="btn">COMANDA ACUM!</a>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div rel="website" class="check-id">
+       <h1>FORMULAR WEBSITE</h1>
     </div>
+     <div rel="logo" class="check-id">
+       <h1>FORMULAR logo</h1>
+    </div>
+   <div rel="design" class="check-id">
+       <h1>FORMULAR design</h1>
+    </div>
+  
 
   
 
