--- a/order.html
+++ b/order.html
@@ -73,13 +73,13 @@
         </div>
       </div>
     </div>
-    <div rel="website" class="check-id">
+    <div rel="#website" class="check-id">
        <h1>FORMULAR WEBSITE</h1>
     </div>
-     <div rel="logo" class="check-id">
+     <div rel="#logo" class="check-id">
        <h1>FORMULAR logo</h1>
     </div>
-   <div rel="design" class="check-id">
+   <div rel="#design" class="check-id">
        <h1>FORMULAR design</h1>
     </div>
   
