Favicon+Home Order style change

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link rel='icon' href='images/favicon.ico' >
 
   </head>
 
@@ -104,10 +105,16 @@
     <br>
     <br>
     <div class="home-order">
-      <div class="v-align">
-        <span>am nevoie de</span>
+      <div class="v-align horder-container">
+        <h4>
+          Cum te putem ajuta?
+        </h4>
+        <span>Am nevoie de</span>
         <input type="text" placeholder="test" id="order-input">
-        <input type="button" class="btn" value="continua" onclick="getOrder()">
+
+        <div>
+          <input type="button" class="btn" value="continua" onclick="getOrder()">
+        </div>
       </div>
     </div>
 
