add images+what we do small section

--- a/index.html
+++ b/index.html
@@ -94,16 +94,27 @@
         </div>
       </div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+  <section id="why-us">
+    <div class="row">
+      <div class="grey-bg">
+        <div class="col">
+          asda
+        </div>
+        <div class="col">
+          asd
+        </div>
+        <div class="col">
+
+        </div>
+        <div class="col">
+          asda
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="homeOrder">
     <div class="home-order">
       <div class="v-align horder-container">
         <h4>
@@ -117,6 +128,7 @@
         </div>
       </div>
     </div>
+  </section>
 
 
     <script src="js/wow.min.js"></script>
