--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
   <section id="why-us">
     <div class="row">
-      <div class="grey-bg">
+      <div class="gray-bg">
         <div class="col">
           asda
         </div>
