--- a/index.html
+++ b/index.html
@@ -96,19 +96,24 @@
     </div>
 
   <section id="why-us">
+    <div class="grey-bg">
     <div class="row">
-      <div class="grey-bg">
-        <div class="col">
-          asda
-        </div>
-        <div class="col">
-          asd
-        </div>
-        <div class="col">
 
+        <div class="col">
+            <img src="images/website-small.png" alt="">
+            <p>Website</p>
         </div>
         <div class="col">
-          asda
+            <img src="images/logodesign.png" alt="">
+            <p>Logo Design</p>
+        </div>
+        <div class="col">
+            <img src="images/bc.png" alt="">
+            <p>Carti de vizita</p>
+        </div>
+        <div class="col">
+          <img src="images/others.png" alt="">
+          <p>Alte designuri</p>
         </div>
       </div>
     </div>
