--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
   <!DOCTYPE html>
   <html lang="en">
-
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,13 +10,11 @@
     <link rel="icon" href="favicon.ico">
     <title>2B-studios | Agentie de Web Design</title>
     <!-- script -->
-
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="js/typed.js"></script>
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
     <script src="js/bootstrap.main.js"></script>
-
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -26,6 +23,7 @@
     <link href="css/animate.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
     <link rel='icon' href='images/favicon.ico' >
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
   </head>
 
@@ -93,47 +91,49 @@
           </div>
         </div>
       </div>
+      <div class="anchor">
+        <a href="#why-us">
+          <img src="" alt="">
+        </a>
+      </div>
     </div>
 
-  <section id="why-us">
-    <div class="grey-bg">
-    <div class="row">
-
-        <div class="col">
-            <img src="images/website-small.png" alt="">
-            <p>Website</p>
+ <div id="why-us">
+    <div class="gray-bg center">
+      <div class="row">
+        <div class="col-sm-3">
+          <i class="fas fa-desktop"></i>
+          <p>Website</p>
         </div>
-        <div class="col">
-            <img src="images/logodesign.png" alt="">
-            <p>Logo Design</p>
+        <div class="col-sm-3">
+          <i class="fab fa-adn"></i>
+          <p>Logo Design</p>
         </div>
-        <div class="col">
-            <img src="images/bc.png" alt="">
-            <p>Carti de vizita</p>
+        <div class="col-sm-3">
+          <i class="far fa-address-card"></i>
+          <p>Carti de vizita</p>
         </div>
-        <div class="col">
-          <img src="images/others.png" alt="">
+        <div class="col-sm-3">
+          <i class="fas fa-pencil-alt"></i>
           <p>Alte designuri</p>
         </div>
       </div>
     </div>
-  </section>
+    </div>
 
-  <section id="homeOrder">
-    <div class="home-order">
-      <div class="v-align horder-container">
-        <h4>
-          Cum te putem ajuta?
-        </h4>
-        <span>Am nevoie de</span>
-        <input type="text" placeholder="test" id="order-input">
+      <div class="home-order">
+        <div class="v-align">
+          <h4>
+            Cum te putem ajuta?
+          </h4>
+          <span>Am nevoie de</span>
+          <input type="text" placeholder="test" id="order-input">
 
-        <div>
-          <input type="button" class="btn" value="continua" onclick="getOrder()">
+          <div>
+            <input type="button" class="btn" value="continua" onclick="getOrder()">
+          </div>
         </div>
       </div>
-    </div>
-  </section>
 
 
     <script src="js/wow.min.js"></script>
