--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <input type="text" placeholder="test" id="order-input">
 
           <div>
-            <input type="button" class="btn" value="continua" onclick="getOrder()">
+            <input type="submit" class="btn" value="continua" onclick="getOrder()">
           </div>
         </div>
       </div>
