--- a/index.html
+++ b/index.html
@@ -129,8 +129,12 @@
             Cum te putem ajuta?
           </h4>
           <span>Am nevoie de</span>
-          <input type="text" placeholder="test" id="order-input">
-
+<select id="order-input">
+  <option value="alege">Alege din lista.</option>
+  <option value="#website">Website</option>
+  <option value="#logo">Logo</option>
+  <option value="#design">Design</option>
+</select>
           <div>
             <input type="submit" class="btn" value="continua" onclick="getOrder()">
           </div>
