Done: Why Chose Us section

--- a/index.html
+++ b/index.html
@@ -123,6 +123,61 @@
     </div>
     </div>
 
+    <div class="choose-us-wraper">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-md-6">
+
+            <div class="devices wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">
+              <img class="img-responsive" src="images/devices.png" alt="">
+            </div>
+          </div>
+
+          <div class="col-md-6 wow fadeInRight"  data-wow-duration="1s" data-wow-delay=".5s">
+
+            <!--Why Choose Us  -->
+            <div class="choose-us-title">
+              <h2>De ce să ne alegi pe noi?</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur temporibus </p>
+            </div>
+            <!-- Choose us description -->
+            <div class="choose-us-des">
+
+              <!--Choose us item 1  -->
+              <div class="choose-us-item wow fadeInUp"  data-wow-duration=".5s" data-wow-delay="1s">
+                <!-- choose us icon  -->
+                <div><i class="fas fa-pencil-alt"></i></div>
+                <!-- Choose us item title desc -->
+                <h3>Avem experiență</h3>
+                <p>We have 5 years of experience in this domain. We worked with big and small companies around the world!</p>
+              </div>
+
+              <!--Choose us item 2  -->
+              <div class="choose-us-item wow fadeInUp"  data-wow-duration=".5s" data-wow-delay="1s">
+                <!-- choose us icon  -->
+                <div><i class="fas fa-stopwatch"></i></div>
+                <!-- Choose us item title desc -->
+                <h3>Ne mișcăm repede</h3>
+                <p>We know how important time is nowadays. Because of our experience, we are able not only to do professional work, but doing it as fast as possible.</p>
+              </div>
+
+              <!--Choose us item 3  -->
+              <div class="choose-us-item wow fadeInUp"  data-wow-duration=".5s" data-wow-delay="1s">
+                <!-- choose us icon  -->
+                <div><i class="far fa-money-bill-alt"></i></div>
+                <!-- Choose us item title desc -->
+                <h3>Avem preturi accesibile</h3>
+                <p>We provide best quality work at a great price. Together we can find the best price for your company!</p>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
       <div class="home-order">
         <div class="v-align">
           <h4>
