--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
 
     <div class="choose-us-wraper">
-      <div class="container">
+      <div class="custom-container">
         <div class="row">
 
           <div class="col-md-6">
