--- a/order.html
+++ b/order.html
@@ -11,8 +11,10 @@
     <link rel="icon" href="favicon.ico">
     <title>2B-studios | Agentie de Web Design</title>
     <!-- script -->
-
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="js/typed.js"></script>
     <script src="js/script.js"></script>
     <script src="js/smooth-scroll.js"></script>
@@ -73,16 +75,47 @@
         </div>
       </div>
     </div>
+    <div class="banner about-banner">
+      <div class="v-align">
+        <div class="custom-container center">
+            <div class="header-text center">
+              <h2>
+                AFLĂ CINE SUNTEM!
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do edolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+            </div>
+       
+        </div>
+      </div>
+    </div>
+    <div class="custom-container pad">
     <div rel="#website" class="check-id">
-       <h1>FORMULAR WEBSITE</h1>
+       <h1>Super, te ajutam noi cu Website ul tau</h1>
+        <form action="" class="order-form">
+         <div class="step first-section active-section">
+           <span class="blue">Pasul 1:</span>
+           <b>Date Personale:</b>
+           <a href="" class="btn next-step">Urmatorul Pas</a>
+         </div>
+         <div class="step second-section">
+           <span class="blue">Pasul 2:</span>
+           <b>Date Personale:</b>
+             <a href="" class="btn next-step">Urmatorul Pas</a>
+   
+         </div>
+          <div class="step third-section">
+           <span class="blue">Pasul 3:</span>
+           <b>Date Personale:</b>
+              <a href="" class="btn next-step">Urmatorul Pas</a>
+        
+         </div>
+       </form>
     </div>
-     <div rel="#logo" class="check-id">
-       <h1>FORMULAR logo</h1>
-    </div>
-   <div rel="#design" class="check-id">
-       <h1>FORMULAR design</h1>
-    </div>
+   
   
+  </div>
 
   
 
