--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
         <span>Am nevoie de</span>
         <select id="order-input">
           <option value="0">Alege din lista.</option>
-          <option value="#website">Website</option>
-          <option value="#logo">Logo</option>
-          <option value="#design">Design</option>
+          <option value="/website-order.html">Website</option>
+          <option value="/website-order.html">Logo</option>
+          <option value="/design-order.html">Design</option>
         </select>
         <div>
           <input type="submit" class="btn" value="continua" onclick="getOrder()">
