--- a/order.html
+++ b/order.html
@@ -75,10 +75,10 @@
         </div>
       </div>
     </div>
- 
+
     <div class="custom-container pad">
     <div rel="#website" class="check-id">
-       <h1>Super, te ajutam noi cu Website ul tau</h1>
+       <h1>Coamda in 3 pasi!</h1>
         <form action="" class="order-form">
          <div class="step first-section active-section">
            <span class="blue">Pasul 1:</span>
@@ -89,21 +89,21 @@
            <span class="blue">Pasul 2:</span>
            <b>Date Personale:</b>
              <a href="" class="btn next-step">Urmatorul Pas</a>
-   
+
          </div>
           <div class="step third-section">
            <span class="blue">Pasul 3:</span>
            <b>Date Personale:</b>
               <a href="" class="btn next-step">Urmatorul Pas</a>
-        
+
          </div>
        </form>
     </div>
-   
-  
+
+
   </div>
 
-  
+
 
 
     <script src="js/wow.min.js"></script>
