--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <select id="order-input">
           <option value="0">Alege din lista.</option>
           <option value="/website-order.html">Website</option>
-          <option value="/website-order.html">Logo</option>
+          <option value="/logo-order.html">Logo</option>
           <option value="/design-order.html">Design</option>
         </select>
         <div>
