--- a/logo-order.html
+++ b/logo-order.html
@@ -100,7 +100,7 @@
             <input type="text" name="email" value="" placeholder="nume@gmail.com" required >
 
             <h6>Telefon</h6>
-            <input type="number" name="" value="">
+            <input type="text" name="" value="">
 
             <div id="check"><input type="checkbox" name="vehicle" value="Bike"> Am verificat ca toate datele sa fie introduse corect</div>
 
